<resources>
    <string name="app_name">com.xiaomi.zkplug</string>
    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_settings_title">DFU Settings</string>
    <string name="dfu_lib_version">DFU Library version 1.3.0</string>
    <string name="not_available">n/a</string>
    <string name="dfu_feature_title_long">DEVICE FIRMWARE UPDATE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="dfu_example_files_created">Example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_example_new_files_created">New example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_scripts_created">DFU script files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_section_application_header">APPLICATION</string>
    <string name="dfu_file_name_label">File Name:</string>
    <string name="dfu_file_type_label">File Type:</string>
    <string name="dfu_file_size_label">File Size:</string>
    <string name="dfu_file_status_label">Status:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_ok">OK</string>
    <string name="dfu_file_status_ok_with_init">OK (Init file selected)</string>
    <string name="dfu_file_status_no_file">File not loaded</string>
    <string name="dfu_file_status_invalid">Invalid file</string>
    <string name="dfu_file_status_error">Reading file failed</string>
    <string name="dfu_file_status_invalid_message">Please, select valid HEX file</string>
    <string name="dfu_file_info">Info</string>
    <string name="dfu_action_select_file">SELECT FILE</string>
    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on your device. Would you like to download one?</string>
    <string-array name="dfu_app_file_browser">
        <item>Drive</item>
        <item>File Manager</item>
        <item>Total Commander</item>
        <item>Search for others</item>
    </string-array>
    <string-array name="dfu_app_file_browser_action">
        <item>market://details?id=com.google.android.apps.docs</item>
        <item>market://details?id=com.rhmsoft.fm</item>
        <item>market://details?id=com.ghisler.android.TotalCommander</item>
        <item>market://search?q=file manager</item>
    </string-array>
    <string name="dfu_section_dfu_header">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_action_upload">UPLOAD</string>
    <string name="dfu_action_upload_cancel">CANCEL</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_mbr_size">MBR size</string>
    <string name="dfu_settings_dfu_mbr_size_title">MBR size (4096 on nRF51, 12288 on nRF52)</string>
    <string name="dfu_settings_dfu_keep_bond">Keep bond information</string>
    <string name="dfu_settings_dfu_assume_dfu_mode">External MCU DFU</string>
    <string name="dfu_settings_dfu_assume_dfu_mode_info">Check this switch to ON if you want to perform a DFU operation without jumping to the bootloader mode on a device
		with a DFU implementation from SDK 6.1 or older. To achieve the same result on any newer implementation the DFU Version characteristic should return value other than 0x0100.</string>
    <string name="dfu_settings_dfu_about">About DFU</string>
    <string name="dfu_settings_dfu_about_summary">DFU documentation on Nordic\'s Developer Zone</string>
    <string name="dfu_settings_dfu_information">Information</string>
    <string name="dfu_settings_dfu_number_of_packets_info">During a DFU operation a lot of data packets are being sent to the target. The <i>onCharacteristicWrite(...)</i>
		callback in Android API is invoked when the data has been written to the outgoing queue, not when physically sent. Packet receipt notifications were introduced to
		prevent from overflowing the queue. Depending on the device model, disabling the notifications or setting the value to “high” (> ~300) may make the DFU process freeze
		at some point.</string>
    <string name="dfu_file_type_title">Select file type</string>
    <string-array name="dfu_file_type">
        <item>Distribution packet (ZIP)</item>
        <item>Soft Device</item>
        <item>Bootloader</item>
        <item>Application</item>
    </string-array>
    <string name="dfu_file_init_title">Init packet</string>
    <string name="dfu_file_init_message">Do you want to select the Init packet file?\n
		The Init packet file (*.dat) should contain the device type and revision, application version, list of supported Soft Devices and the firmware CRC
		in binary format or, with old versions of the DFU bootloader, only the CRC (CRC-CCITT-16).
		With the new version of the bootloader the extended Init packet is <b>required</b>.</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_uploading_percentage_label">0%</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="dfu_default_name">DEFAULT DFU</string>
    <string name="dfu_confirmation_dialog_title">Application Uploading</string>
    <string name="dfu_upload_dialog_cancel_message">Are you sure to cancel upload?</string>
    <string name="dfu_success">Application has been transferred successfully.</string>
    <string name="dfu_aborted">Uploading of the application has been canceled.</string>
    <string name="dfu_help_title">Select file</string>
    <string name="dfu_help_message">A file browser application must be installed on the device before selecting the file.
		\n\nThere are number of applications available on Google Play store, e.g. Total Commander or File Manager, that allow you to pick a file from internal memory of the device. To upload
		a file from the Internet you may use f.e. Drive or Dropbox application.
		\n\nYou will be asked to select an application if more than one is installed. A single application will be launched automatically.
		\n\nSince <b>Android KitKat</b> you may use the preinstalled document picker application. Ensure <i>Display advanced devices</i> option is enabled in settings to use the <i>Internal storage</i>.
		\n\nSample applications were copied to <i>Nordic Semiconductor</i> folder in the internal storage.</string>
    <string name="dfu_zip_info_text">Starting from nRF Toolbox v1.12 the new Distribution packet (ZIP) is the recommended method for distributing firmware upgrades.
		You can create the ZIP file using the <b>nrf utility</b> tool, which is part of Master Control Panel 3.8.0+. For more detailed information, see the DFU documentation.
		\n\n<b>Backward compatibility</b>
		\nThe nRF Toolbox also supports all old file formats: HEX and BIN files, separate DAT files and ZIP files without a manifest file but with a fixed naming convention:
</string>
    <string name="dfu_about_text">The Device Firmware Update (DFU) app allows you to update the firmware of your Bluetooth Smart device over-the-air (OTA).
		It is compatible with Nordic Semiconductor nRF51822 or nRF51422 devices with S110 SoftDevice and DFU bootloader enabled. With SoftDevice s110 7.0.0+,
		the SoftDevice itself and/or a bootloader may also be updated.
		\n\nFor more information about the DFU, see the About DFU section in Settings.</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string formatted="false" name="dfu_status_uploading_part">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="zelkova_lock_name">榉树智能门锁</string>
    <string name="network_not_avilable">网络未连接，请确保网络畅通</string>
    <string name="open_bluetooth">请打开手机蓝牙</string>
    <string name="bluetooth_not_open">手机蓝牙未打开</string>
    <string name="device_has_been_reset">设备已被重置，请解除绑定后重新添加</string>
    <string name="connect_time_out">未发现门锁，请靠近门锁重试</string>
    <string name="data_query_fail">数据查询失败</string>
    <string name="cmd_out_of_time">请到"设备信息"页将手机时间同步到门锁</string>
    <string name="gloable_confirm">确定</string>
    <string name="gloable_cancel">取消</string>
    <string name="gloable_data_error">数据解析异常</string>
    <string name="gloable_format_err">数据格式异常</string>
    <string name="gloable_no_seckey">无密钥数据</string>
    <string name="gloable_wrongcode_1">处理服务器发来的锁命令时，没有能解密出来</string>
    <string name="gloable_wrongcode_2">无效钥匙</string>
    <string name="gloable_wrongcode_3">命令不在有效期，请到"设备信息"页将手机时间同步到锁内后再尝试</string>
    <string name="gloable_wrongcode_4">虽然锁命令未过期，但是不在指定的周期内Week，month，包括所处的周期时间</string>
    <string name="gloable_wrongcode_5">次数使用完毕</string>
    <string name="gloable_wrongcode_6">Open指令要求绑定到首次使用的设备，当前设备不是首次使用设备的Id</string>
    <string name="gloable_wrongcode_7">当前指纹头不在录入状态，请稍后再添加</string>
    <string name="gloable_wrongcode_8">所执行的操作导致超过既定容量</string>
    <string name="gloable_wrongcode_9">命令中的时间，与锁体时间误差过大</string>
    <string name="gloable_wrongcode_10">未知错误</string>
    <string name="gloable_wrongcode_11">得到的数据不能正确解析出协议内容</string>
    <string name="gloable_wrongcode_12">锁命令中MAC与锁不匹配</string>
    <string name="gloable_wrongcode_13">手机与锁Rom的通讯Token已经过期，或无效</string>
    <string name="gloable_wrongcode_14">与控制端交换密钥的方式，不被ROM支持</string>
    <string name="device_closer_lock">请将门锁和手机尽量靠近</string>
    <string name="device_lock_power">门锁电量：</string>
    <string name="device_sec_level">安全等级：</string>
    <string name="device_mute_mode">静音模式</string>
    <string name="device_mute_intro">开启后操作键盘和开锁时，门锁不会发出提示音</string>
    <string name="device_fp_count">指纹数量：</string>
    <string name="device_pwd_count">密码数量：</string>
    <string name="device_rom_version">固件版本号：</string>
    <string name="device_plugin_version">插件版本号：</string>
    <string name="device_lock_time">锁内时间：</string>
    <string name="device_phone_time">手机时间：</string>
    <string name="device_sync_from_phone">和手机时间进行同步</string>
    <string name="device_info_level_content">了解门锁安全等级</string>
    <string name="any_mode_open">任意方式开锁</string>
    <string name="any_fp_open">任意指纹开锁</string>
    <string name="any_pwd_open">任意密码开锁</string>
    <string name="any_blekey_open">任意手机钥匙开锁</string>
</resources>